--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.4.1",
     "convex": "^1.15.0",
     "next": "14.2.8",
+    "openai": "^4.58.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
